<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:paddingLeft="17dp"
    android:paddingRight="17dp"
    tools:context=".Activities.SwapCreationActivity">

    <ImageView
        android:id="@+id/img_back_creation_body"
        android:layout_width="18dp"
        android:layout_height="18dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="25dp"
        android:contentDescription="@string/back"
        android:src="@drawable/ic_back" />

    <ProgressBar
        android:id="@+id/creation_body_progress_bar"
        android:layout_width="26dp"
        android:layout_height="26dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="20dp"
        android:visibility="gone"/>

    <ImageView
        android:id="@+id/img_save_creation_body"
        android:layout_width="18dp"
        android:layout_height="18dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="25dp"
        android:contentDescription="@string/save"
        android:src="@drawable/ic_yes" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="20dp"
            android:layout_marginTop="30dp"
            android:fontFamily="@font/raleway_medium"
            android:text="@string/your_current_shift"
            android:textColor="#000000"
            android:textSize="20sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="4dp"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="14dp"
                    android:fontFamily="@font/raleway_semi_bold"
                    android:text="@string/day"
                    android:textColor="#000000"
                    android:textSize="18sp" />

                <Spinner
                    android:id="@+id/shifts_day_spinner"
                    android:layout_width="match_parent"
                    android:layout_height="45dp">

                </Spinner>
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="14dp"
                    android:fontFamily="@font/raleway_semi_bold"
                    android:text="@string/date"
                    android:textColor="#000000"
                    android:textSize="18sp" />

                <EditText
                    android:id="@+id/edit_text_shift_date"
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:hint="@string/example_date" />
            </LinearLayout>

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="14dp"
                android:fontFamily="@font/raleway_semi_bold"
                android:text="@string/time"
                android:textColor="#000000"
                android:textSize="18sp" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">

                <Spinner
                    android:id="@+id/shifts_time_spinner"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1">

                </Spinner>

                <RelativeLayout
                    android:id="@+id/creationBodyShiftTimeAM"
                    android:layout_width="45dp"
                    android:layout_height="45dp"
                    android:layout_marginLeft="8dp"
                    android:layout_marginRight="8dp"
                    android:background="@drawable/selection_background"
                    android:gravity="center">

                    <TextView
                        android:id="@+id/creationBodyShiftTimeAMText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/am"
                        android:textColor="#ffffff"
                        android:textSize="14sp" />

                </RelativeLayout>


                <RelativeLayout
                    android:id="@+id/creationBodyShiftTimePM"
                    android:layout_width="45dp"
                    android:layout_height="45dp"
                    android:background="@drawable/selection_background_light"
                    android:gravity="center">

                    <TextView
                        android:id="@+id/creationBodyShiftTimePMText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/pm"
                        android:textColor="@color/colorPrimary"
                        android:textSize="14sp" />

                </RelativeLayout>

            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="30dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="14dp"
                android:fontFamily="@font/raleway_semi_bold"
                android:text="@string/team_leader"
                android:textColor="#000000"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/edit_text_team_leader_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/your_team_leader_s_name"
                android:inputType="textPersonName" />

        </LinearLayout>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="20dp"
            android:fontFamily="@font/raleway_medium"
            android:text="@string/preferred_shift"
            android:textColor="#000000"
            android:textSize="20sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="14dp"
                android:fontFamily="@font/raleway_semi_bold"
                android:text="@string/time"
                android:textColor="#000000"
                android:textSize="18sp" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">

                <Spinner
                    android:id="@+id/preferred_time_spinner"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1">

                </Spinner>

                <RelativeLayout
                    android:id="@+id/creationBodyPreferredTimeAM"
                    android:layout_width="45dp"
                    android:layout_height="45dp"
                    android:layout_marginLeft="8dp"
                    android:layout_marginRight="8dp"
                    android:background="@drawable/selection_background"
                    android:gravity="center">

                    <TextView
                        android:id="@+id/creationBodyPreferredTimeAMText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/am"
                        android:textColor="#ffffff"
                        android:textSize="14sp" />

                </RelativeLayout>


                <RelativeLayout
                    android:id="@+id/creationBodyPreferredTimePM"
                    android:layout_width="45dp"
                    android:layout_height="45dp"
                    android:background="@drawable/selection_background_light"
                    android:gravity="center">

                    <TextView
                        android:id="@+id/creationBodyPreferredTimePMText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/pm"
                        android:textColor="@color/colorPrimary"
                        android:textSize="14sp" />

                </RelativeLayout>

            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>