<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:descendantFocusability="blocksDescendants">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="2dp"
        android:layout_marginLeft="2dp"
        android:layout_marginTop="1.5dp"
        android:layout_marginBottom="1.5dp"
        android:background="#ffffff">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingBottom="8dp"
        android:paddingEnd="16dp"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:paddingStart="16dp"
        android:paddingTop="8dp">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical">

            <ProgressBar
                android:id="@+id/progressBarListItem"
                android:layout_width="56dp"
                android:layout_height="56dp"
                android:visibility="gone"
                style="?android:attr/progressBarStyle" />

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/swapper_image"
                android:layout_width="56dp"
                android:layout_height="56dp"
                android:src="@drawable/male_circle_512" />

        </RelativeLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="16dp"
            android:layout_marginStart="16dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/swapper_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/raleway_medium"
                android:maxLines="1"
                android:textColor="#000000"
                android:textSize="16sp"
                tools:text="Muhammad Gamal" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/swapper_shift_time"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="#000000"
                    android:textSize="14sp"
                    android:layout_marginRight="4dp"
                    tools:text="@string/shift_time"
                    android:textStyle="bold"/>

                <TextView
                    android:id="@+id/swapper_shift_day"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/raleway_semi_bold"
                    android:textColor="#000000"
                    android:textSize="14sp"
                    tools:text="Wednesday"
                    android:textStyle="bold" />
            </LinearLayout>

            <TextView
                android:id="@+id/swapper_shift_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="12sp"
                tools:text="18/10/2018" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="8dp"
                    android:fontFamily="@font/raleway_semi_bold"
                    android:textSize="12sp"
                    android:text="@string/preferred_shift" />

                <TextView
                    android:id="@+id/swapper_preferred_shift"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="12sp"
                    tools:text="02:00" />

                <TextView
                    android:id="@+id/amOrPMPreferredShiftListItem"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="3dp"
                    android:fontFamily="@font/raleway_semi_bold"
                    android:textSize="12sp"
                    tools:text="PM" />
            </LinearLayout>

        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingStart="16dp">

            <Button
                android:id="@+id/btnHomeSwapList"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:background="@drawable/btn_style"
                android:text="@string/swap"
                android:textAllCaps="false"
                android:textColor="#ffffff"
                android:textSize="14sp"/>

        </RelativeLayout>
    </LinearLayout>
    </android.support.v7.widget.CardView>
</RelativeLayout>